# android_hand_writing_recognition

./: local.properties
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/keystores/: debug.jks  xpc_release.jks
app/src/androidTest/java/com/dutn/handwritingdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: mnist_trained.json
app/src/main/cpp/: ImageGraphProcessing.cpp  Numpy.cpp  native-lib.cpp
app/src/main/java/com/dutn/handwritingdemo/: MainActivity.java  NeuralNetwork.java
app/src/main/java/com/dutn/handwritingdemo/utils/: ImageGraphProcessing.java  Numpy.java  Point.java  Rect.java
app/src/main/java/com/dutn/handwritingdemo/views/: DrawModel.java  DrawRenderer.java  DrawView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dutn/handwritingdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
